--- a/app/src/main/res/menu/details_menu.xml
+++ b/app/src/main/res/menu/details_menu.xml
@@ -2,6 +2,12 @@
 <menu xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item android:id="@+id/share_recipe"
+        android:icon="@drawable/ic_share"
+        android:title="@string/save_to_favorite"
+        app:showAsAction="ifRoom"
+        android:iconTint="@color/white"
+        tools:targetApi="o" />
     <item android:id="@+id/save_to_favorites_menu"
         android:icon="@drawable/ic_star"
         android:title="@string/save_to_favorite"
